...
                drawLine(
                    Color(0x6B6F9AD0),
                    Offset(size.width - scale.dp.toPx(), (61.639f * scale).dp.toPx()),
                    Offset(size.width - scale.dp.toPx(), size.height - (61.639f * scale).dp.toPx()),
                    (2 * scale).dp.toPx(),
                )
            }.testTag("companion-menu"),
    ) {
        val portrait: @Composable (Modifier) -> Unit = { modifier ->
            Box(
                modifier
                    .size((154 * scale).dp)
                    .background(
...
